<resources>
    <string name="app_name">Verbo</string>
    <string name="verbo_icon_large">Verbo_icon_large</string>
    <string name="verbo_icon_small">Verbo_icon_small</string>
    <string name="text_hi">Hi,Username! </string>


    <string name="text_bottom_login">Login</string>
    <string name="text_bottom_signup">Signup</string>
    <string name="text_bottom_click">Click here</string>
    <string name="text_bottom_back">Back</string>
    <string name="text_bottom_learn_verbs">Learn verbs</string>
    <string name="text_bottom_repeat_verbs">Repeat verbs</string>
    <string name="text_bottom_exam">Exam</string>
    <string name="text_bottom_grammar">Grammar</string>
    <string name="text_bottom_profile">Profile</string>
    <string name="text_bottom_account">Account</string>
    <string name="text_bottom_vocabulary">Vocabulary</string>
    <string name="text_bottom_logout">Logout</string>


    <string name="text_hint_username">username</string>
    <string name="text_hint_password">password</string>
    <string name="text_hint_email">email</string>
    <string name="text_hint_native">native language</string>
    <string name="text_hint_learning">learning language</string>


    <string name="username_contentDescription">input field username</string>
    <string name="select_here">Select Here</string>
    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>


    <!-- Messages Preferences -->
    <string name="username_title">Your username</string>
    <string name="password_title">Your password</string>
    <string name="email_title">Your email</string>

    <string name="native_language_title">Native language</string>
    <string name="learning_language_title">Learning language</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>