<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dfcd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".UserScreenActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/verbo_icon_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="144dp"
        android:layout_height="145dp"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/verbo_icon_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="157dp"
        android:layout_height="28dp"
        android:layout_marginTop="35dp"
        android:gravity="center|center_horizontal"
        android:text="@string/text_hi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="275dp"

        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="65dp"

            android:text="@string/text_bottom_account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/vocabulary"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/text_bottom_vocabulary"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />


    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="65dp"

        android:layout_marginTop="80dp"
        android:text="@string/text_bottom_logout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>