<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainScreenActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="190dp"
        android:layout_height="155dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/verbo_icon_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_verbo_large" />

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="400dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <Button
            android:id="@+id/learn_verbs"
            android:layout_width="match_parent"
            android:layout_height="65dp"

            android:text="@string/text_bottom_learn_verbs"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/repeat_verbs"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/text_bottom_repeat_verbs"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/exam"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/text_bottom_exam"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/grammar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/text_bottom_grammar"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/text_bottom_profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>