<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="357dp"
        android:contentDescription="@string/verbo_icon_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_verbo_large" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="275dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/text_hint_username"
            android:inputType="text"

            android:textColor="@color/black"
            android:textSize="16sp"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/black"
            app:met_underlineColor="@color/black"
            tools:ignore="TextContrastCheck" />


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/text_hint_password"

            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/black"
            app:met_underlineColor="@color/black"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <Button
            android:id="@+id/button_back"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/text_bottom_back"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="489dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/text_bottom_login"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:backgroundTint="@color/white"

            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:layout_editor_absoluteX="252dp"
            tools:layout_editor_absoluteY="480dp" />


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>