<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupScreenActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="137dp"
        android:layout_height="129dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="516dp"
        android:contentDescription="@string/verbo_icon_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_verbo_large" />

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="351dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="145dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.767">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/text_hint_username"
            android:inputType="text"
            android:textColor="@color/black"

            app:met_floatingLabel="normal"
            app:met_maxCharacters="15"
            app:met_minCharacters="2"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/text_hint_password"

            android:inputType="text"
            android:textColor="@color/black"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="15"
            app:met_minCharacters="5"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/text_hint_email"
            android:inputType="text"
            android:textColor="@color/black"

            app:met_floatingLabel="normal"
            app:met_maxCharacters="15"
            app:met_minCharacters="2"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_username1"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/text_hint_username"
            android:inputType="text"

            android:textColor="@color/black"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="15"
            app:met_minCharacters="2"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signup_username2"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/text_hint_username"
            android:inputType="text"

            android:textColor="@color/black"
            app:met_floatingLabel="normal"
            app:met_maxCharacters="15"
            app:met_minCharacters="2"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>